syntax = "proto3";

package user;

service UserService {
  rpc FindOne (FindOneRequest) returns (UserResponse);
  rpc FindAll (FindAllRequest) returns (UserListResponse);
  rpc Create (CreateUserRequest) returns (UserResponse);
}

message FindOneRequest {
  string id = 1;
}

message FindAllRequest {
  // 페이지네이션 등 추가 가능
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string created_at = 4;
}

message UserListResponse {
  repeated UserResponse users = 1;
}

